# bot-commit-classifier

./: README.md  environment.yml  pyproject.toml
data/processed/: predict_sample_small.txt
notebooks/: preprocessing_test.ipynb
notebooks/.ipynb_checkpoints/: preprocessing_test-checkpoint.ipynb
src/: cleaning.py  main.py
